se agrega logo, footer, unifican estilos

--- a/Registrarse.html
+++ b/Registrarse.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Registro.css">
+    <link rel="stylesheet" href="css/Registro.css">
     <title>Registrate</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
       </head>
-  <header class= "col-12">
-    <a href="Home">LOGO</a>
+  <header class= "row">
+    <div class="logo col-2">
+      <a href="Home"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
+
+    </div>
   </header>
   <body>
     <form class="needs-validation" novalidate>
@@ -69,6 +72,8 @@
       </div>
       <button class="btn btn-primary" type="submit">Registrarme</button>
     </form>
+
+    <footer class="row">Grupo9DHCopyright2019 - Todos los derechos reservados</footer>
 
     <script>
     // Example starter JavaScript for disabling form submissions if there are invalid fields
