--- a/login.html
+++ b/login.html
@@ -11,9 +11,8 @@
     <div class="container-fluid">
 
       <header class="row presentacion">
-        <div class="col-xs-12 col-md-12">
-          <h1> 100% ARGENTO</h1>
-        </div>
+        <div class="logo col-2">
+          <a href="Home"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
       </header>
 
       <main class= "row form-login text-center" >
@@ -58,10 +57,7 @@
         </div>
 
       </main>
-      <footer>
-
-
-      </footer>
+      <footer class="row">Grupo9DHCopyright2019 - Todos los derechos reservados</footer>
     </div>
   </body>
 </html>
