--- a/preguntas.html
+++ b/preguntas.html
@@ -13,7 +13,7 @@
 
       <header class="row">
         <nav class="col-12 navbar navbar-expand-lg navbar-light bg-light">
-          <a class="navbar-brand" href="#">Inicio</a>
+          <a href="Home"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
@@ -56,7 +56,7 @@
 
       </main>
 
-      <footer></footer>
+      <footer class="row">Grupo9DHCopyright2019 - Todos los derechos reservados</footer>
     </div>
 
   </body>
