se trabajo en el footer, logo, nav, home

--- a/Registrarse.html
+++ b/Registrarse.html
@@ -73,7 +73,11 @@
       <button class="btn btn-primary" type="submit">Registrarme</button>
     </form>
 
-    <footer class="row">Grupo9DHCopyright2019 - Todos los derechos reservados</footer>
+    <footer class="row">
+      <div class="col-12 footer">
+        Grupo9DHCopyright2019 - Todos los derechos reservados
+      </div>
+    </footer>
 
     <script>
     // Example starter JavaScript for disabling form submissions if there are invalid fields
