--- a/home.html
+++ b/home.html
@@ -3,47 +3,56 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scalable=1">
   <title>HOME</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/home.css">
+  <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico|Satisfy|Signika&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
+  <div class="container-fluid contenedor">
+    <header>
+      <nav class="row">
+        <ul class="col-md-12 nav nav-pills nav-fill">
+            <li class="nav-item">
+              <a class="nav-link active" href="#HOME">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#REGISTRATE">REGISTRATE</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#LOGIN">LOGIN</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#PREGUNTAS">PREGUNTAS FRECUENTES</a>
+            </li>
+          </ul>
+      </nav>
+    </header>
 
+    <main class="row">
+      <div class="col-xs-6 col-md-12 argento">
+        <img src="imagenes/logo.png" alt="logo" class="logo">
+      </div>
+      <div class="col-12 Bienvenidos">
+        <h1>Bienvenidos</h1>
 
-
-    <ul class="nav nav-pills nav-fill">
-        <li class="nav-item">
-          <a class="nav-link active" href="#">HOME</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">REGISTRATE</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">LOGIN</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">PREGUNTAS FRECUENTES</a>
-        </li>
-      </ul>
-
-
-    <div class="container-fluid">
-
-        <header class="row presentacion">
-              <div class="col-xs-12 col-md-12">
-                <h1> 100% ARGENTO</h1>
-                <h2>Bienvenidos</h2>
-    </div>
-
-        </header>
-
-            <img src="C:\Users\Stella Maris\Documents\GitHub\Repojuego\imagenes\mate.jpg" alt="mate">
-
+      </div>
+      <div class="col-12 Jugar">
         <button type="button" class="btn btn-primary btn-lg btn-block">Jugar</button>
+      </div>
 
-    <footer>Grupo9DHCopyright2019 - Todos los derechos reservados</footer>
+    </main>
+    <footer class="row">
+      <div class="col-12 footer">
+        Grupo9DHCopyright2019 - Todos los derechos reservados
+      </div>
+    </footer>
+
+  </div>
+
 </body>
 
 </html>
