--- a/preguntas.html
+++ b/preguntas.html
@@ -30,7 +30,7 @@
         <div class="titulo col-12">
           <h1>Preguntas Frecuentes</h1>
         </div>
-        <div class="preg-rtas col-8 ">
+        <div class="preg-rtas col-md-8 ">
           <h2>¿Como me registro?</h2>
           <p>Para registraste debes completar un formulario con tus datos hacendo <a href="registro">click aquí</a>
           </p>
@@ -56,7 +56,11 @@
 
       </main>
 
-      <footer class="row">Grupo9DHCopyright2019 - Todos los derechos reservados</footer>
+      <footer class="row">
+        <div class="col-12 footer">
+          Grupo9DHCopyright2019 - Todos los derechos reservados
+        </div>
+      </footer>
     </div>
 
   </body>
