--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
 
       <header class="row presentacion">
         <div class="logo col-2">
-          <a href="Home"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
+          <a href="home.html"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
       </header>
 
       <main class= "row form-login text-center" >
@@ -25,11 +25,15 @@
           <div class="boton-face">
             <button type="button" class="btn btn-primary "><img width="30 30"src="imagenes/Facebook_Logo_(2019).png" alt="logo-face"> Logueate con Facebook</button>
           </div>
+          <div class="linea-texto">
+            <span>
+              <hr  width= 100% >
+            </span>
+            <span>
+              O ingresa con tu e-mail
+            </span>
 
-          <div class="titulo-2">
-            <h3>Ó</h3>
           </div>
-
           <div class="formulario">
             <form class="" action="index.html" method="post">
               <p>
