se trabajo sobre los archivos css

--- a/Registrarse.html
+++ b/Registrarse.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/Registro.css">
     <title>Registrate</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico|Satisfy|Signika&display=swap" rel="stylesheet">
       </head>
   <header class= "row">
     <div class="logo col-2">
@@ -72,7 +73,6 @@
       </div>
       <button class="btn btn-primary" type="submit">Registrarme</button>
     </form>
-
     <footer class="row">
       <div class="col-12 footer">
         Grupo9DHCopyright2019 - Todos los derechos reservados
