--- a/preguntas.html
+++ b/preguntas.html
@@ -6,6 +6,7 @@
     <title>Preguntas Frecuentes</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/preguntas.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico|Satisfy|Signika&display=swap" rel="stylesheet">
 
   </head>
   <body>
@@ -31,10 +32,10 @@
           <h1>Preguntas Frecuentes</h1>
         </div>
         <div class="preg-rtas col-md-8 ">
-          <h2>¿Como me registro?</h2>
+          <h2>¿Cómo me registro?</h2>
           <p>Para registraste debes completar un formulario con tus datos hacendo <a href="registro">click aquí</a>
           </p>
-          <h2>¿Cual es el objetivo?</h2>
+          <h2>¿Cúal es el objetivo?</h2>
           <p>El objetivo del juego es poner tu argentinidad a prueba. Esto se hará respondiedo preguntas las cuales te daran un puntaje, el cual se sumará e irá determinando un porcentaje.</p>
           <h2>¿Cómo jugar?</h2>
           <p></p>
