modificaciones en login, nuevo parrafo

--- a/Registrarse.html
+++ b/Registrarse.html
@@ -10,7 +10,7 @@
       </head>
   <header class= "row">
     <div class="logo col-2">
-      <a href="Home"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
+      <a href="home.html"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
 
     </div>
   </header>
