--- a/home.html
+++ b/home.html
@@ -17,16 +17,16 @@
       <nav class="row">
         <ul class="col-md-12 nav nav-pills nav-fill">
             <li class="nav-item">
-              <a class="nav-link active" href="#HOME">HOME</a>
+              <a class="nav-link active" href="home.html">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#REGISTRATE">REGISTRATE</a>
+              <a class="nav-link" href="Registrarse.html">REGISTRATE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#LOGIN">LOGIN</a>
+              <a class="nav-link" href="login.html">LOGIN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#PREGUNTAS">PREGUNTAS FRECUENTES</a>
+              <a class="nav-link" href="preguntas.html">PREGUNTAS FRECUENTES</a>
             </li>
           </ul>
       </nav>
