--- a/login.html
+++ b/login.html
@@ -6,17 +6,21 @@
     <title>login</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/login.css">
+    <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico|Satisfy|Signika&display=swap" rel="stylesheet">
 
   </head>
   <body>
     <div class="container-fluid">
 
       <header class="row presentacion">
-        <div class="logo col-2">
+        <div class="logo col-xs-2 col-md-2">
           <a href="home.html"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
+        </div>
+
       </header>
 
       <main class= "row form-login text-center" >
+
         <div class="col-xs-12 col-md-4 offset-md-4">
 
           <div class="avatar">
@@ -31,7 +35,7 @@
               <hr  width= 100% >
             </span>
             <span>
-              O ingresa con tu e-mail
+              O ingresá con tu e-mail
             </span>
 
           </div>
@@ -55,7 +59,9 @@
               <p>
                 <button type="button" class="btn btn-primary btn-lg">Iniciar Sesión</button>
               </p>
-
+              <p>
+                ¿Todavía no tenés una cuenta? <a href="Registrarse.html">Registrate</a>
+              </p>
             </form>
 
           </div>
@@ -63,7 +69,7 @@
 
       </main>
       <footer class="row">
-        <div class="col-12 footer">
+        <div class="col-xs-12 col-md-12 footer">
           Grupo9DHCopyright2019 - Todos los derechos reservados
         </div>
       </footer>
