--- a/preguntas.html
+++ b/preguntas.html
@@ -14,7 +14,7 @@
 
       <header class="row">
         <nav class="col-12 navbar navbar-expand-lg navbar-light bg-light">
-          <a href="Home"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
+          <a href="home.html"> <img src="imagenes/logo.png" alt="logo" class="logo">  </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
           </button>
