--- a/Registrarse.html
+++ b/Registrarse.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/Registro.css">
     <title>Registrate</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"
+    <link rel="stylesheet" href="css/Registro.css">
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower|Pacifico|Satisfy|Signika&display=swap" rel="stylesheet">
       </head>
   <header class= "row">
@@ -16,6 +17,9 @@
   </header>
   <body>
     <form class="needs-validation" novalidate>
+      <div class="row">
+        <h1>Registrate aquí...</h1>
+      </div>
       <div class="form-row">
         <div class="col-12 col-md-4">
           <label for="validationCustom01">Nombre/s</label>
