--- a/preguntas.html
+++ b/preguntas.html
@@ -33,24 +33,42 @@
         </div>
         <div class="preg-rtas col-md-8 ">
           <h2>¿Cómo me registro?</h2>
-          <p>Para registraste debes completar un formulario con tus datos hacendo <a href="registro">click aquí</a>
+          <p>Para registraste debes completar un formulario con tus datos hacendo. <a href="registro">click aquí.</a>
+          </p>
+          <h2>¿Cómo puedo recuperar mi contraseña?</h2>
+          <p>Si olvido su contraseña puede recuperarla ingresando <a href="#">aquí.</a>
           </p>
           <h2>¿Cúal es el objetivo?</h2>
-          <p>El objetivo del juego es poner tu argentinidad a prueba. Esto se hará respondiedo preguntas las cuales te daran un puntaje, el cual se sumará e irá determinando un porcentaje.</p>
+          <p>El objetivo del juego es poner tu argentinidad a prueba. Esto se hará respondiedo preguntas, si la respuesta es correcta, éstas te daran un puntaje, el cual será acumulativo e irá determinando un porcentaje.</p>
+          <h2>¿Cúales son las reglas?</h2>
+          <p>Cada una de las caras del dado posee una categoria: Costumbres Argentinas, Historia, Geografia, Fauna y flora, Entretenimiento, Deportes. Se puede jugar solo o con otras personas. En este caso los jugadores podran competir por puntos o poner en juego los suyos</p>
           <h2>¿Cómo jugar?</h2>
-          <p></p>
+          <p>El participante deberá tirar el dado. En el mismo se podra observar sobre una de sus caras la categoria sobre la cúal se hará la pregunta que deberá responder.</p>
+          <p>El participante tendra 5 posibilidades de contestar en forma erronea, pero podrá acumular 1 vida cada vez que complete un puntaje equivalente al 20%.</p>
+          <p>El participante podra jugar solo o con otros jugadores, con los cuales podra competir.</p>
+          <h2>¿Qué edad debo tener para jugar?</h2>
+          <p>Los jugadores deben tener ser mayores de 18 años.</p>
           <h2>¿Cuando finaliza el juego?</h2>
-          <p>El juego finaliza al llegar al 100% Argentino</p>
+          <p>El juego finaliza al llegar al 100% Argento.</p>
+          <h2>¿La aplicacion tiene contenido pago?</h2>
+          <p>La aplicacion es gratuita.</p>
+          <h2>¿Se pueden comprar vidas?</h2>
+          <p>No es posible comprar vidas, solo se puden ganar mediante la acumulacion de respuestas correctas.</p>
 
 
         </div>
         <aside class="Preguntas col-4">
           <nav>
             <ul>
-              <li><a href="#">¿Como me registro?</a></li>
+              <li><a href="#">¿Cómo me registro?</a></li>
+              <li><a href="#">¿Cómo puedo recuperar mi contraseña?</a></li>
+              <li><a href="#">¿Cúales son las reglas?</a></li>
               <li><a href="#">¿Cual es el objetivo?</a></li>
               <li><a href="#">¿Cómo jugar?</a></li>
+              <li><a href="#">¿Qué edad debo tener para jugar?</a></li>
               <li><a href="#">¿Cuando finaliza el juego?</a></li>
+              <li><a href="#">¿La aplicacion tiene contenido pago?</a></li>
+              <li><a href="#">¿Se pueden comprar vidas?</a></li>
             </ul>
           </nav>
         </aside>
