ultimos retoques login y preguntas

--- a/login.html
+++ b/login.html
@@ -31,12 +31,10 @@
             <button type="button" class="btn btn-primary "><img width="30 30"src="imagenes/Facebook_Logo_(2019).png" alt="logo-face"> Logueate con Facebook</button>
           </div>
           <div class="linea-texto">
-            <span>
-              <hr  width= 100% >
-            </span>
-            <span>
+
+            <div>
               O ingresá con tu e-mail
-            </span>
+            </div>
 
           </div>
           <div class="formulario">
