--- a/preguntas.html
+++ b/preguntas.html
@@ -33,10 +33,10 @@
         </div>
         <div class="preg-rtas col-md-8 ">
           <h2>¿Cómo me registro?</h2>
-          <p>Para registraste debes completar un formulario con tus datos hacendo. <a href="registro">click aquí.</a>
+          <p>Para registraste debes completar un formulario con tus datos hacendo. <a href="Registrarse.html">click aquí.</a>
           </p>
           <h2>¿Cómo puedo recuperar mi contraseña?</h2>
-          <p>Si olvido su contraseña puede recuperarla ingresando <a href="#">aquí.</a>
+          <p>Si olvido su contraseña puede recuperarla ingresando <a href="login.html">aquí.</a>
           </p>
           <h2>¿Cúal es el objetivo?</h2>
           <p>El objetivo del juego es poner tu argentinidad a prueba. Esto se hará respondiedo preguntas, si la respuesta es correcta, éstas te daran un puntaje, el cual será acumulativo e irá determinando un porcentaje.</p>
