se agrego parrafo a home y se trabajo en el css de preguntas

--- a/home.html
+++ b/home.html
@@ -17,13 +17,13 @@
       <nav class="row">
         <ul class="col-md-12 nav nav-pills nav-fill">
             <li class="nav-item">
-              <a class="nav-link active" href="home.html">HOME</a>
+              <a class="nav-link active" href="home.html" id="HOME">HOME</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="Registrarse.html">REGISTRATE</a>
+              <a class="nav-link" href="Registrarse.html" id="REGISTRATE">REGISTRATE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html">LOGIN</a>
+              <a class="nav-link" href="login.html" id="LOGIN">LOGIN</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="preguntas.html">PREGUNTAS FRECUENTES</a>
@@ -33,11 +33,15 @@
     </header>
 
     <main class="row">
-      <div class="col-xs-6 col-md-12 argento">
+      <div class="col-xs-6 col-md-4 argento">
         <img src="imagenes/logo.png" alt="logo" class="logo">
       </div>
-      <div class="col-12 Bienvenidos">
+      <div class="col-md-8 Bienvenidos">
         <h1>Bienvenidos</h1>
+      </div>
+      <div class="col-12 desafio">
+        <p>¿Cúanto sabes de Argentina? ¿Te animas a ponerlo a prueba?...</p>
+        <p>Animate solo o con amigos</p>
 
       </div>
       <div class="col-12 Jugar">
