--- a/preguntas.html
+++ b/preguntas.html
@@ -28,10 +28,10 @@
       </header>
 
       <main class="row">
-        <div class="titulo col-12">
+        <div class="titulo col-12 preg">
           <h1>Preguntas Frecuentes</h1>
         </div>
-        <div class="preg-rtas col-md-8 ">
+        <div class="preg-rtas col-md-8 preg-rtas">
           <h2>¿Cómo me registro?</h2>
           <p>Para registraste debes completar un formulario con tus datos hacendo. <a href="Registrarse.html">click aquí.</a>
           </p>
@@ -63,7 +63,7 @@
               <li><a href="#">¿Cómo me registro?</a></li>
               <li><a href="#">¿Cómo puedo recuperar mi contraseña?</a></li>
               <li><a href="#">¿Cúales son las reglas?</a></li>
-              <li><a href="#">¿Cual es el objetivo?</a></li>
+              <li><a href="#">¿Cúal es el objetivo?</a></li>
               <li><a href="#">¿Cómo jugar?</a></li>
               <li><a href="#">¿Qué edad debo tener para jugar?</a></li>
               <li><a href="#">¿Cuando finaliza el juego?</a></li>
