--- a/preguntas.html
+++ b/preguntas.html
@@ -22,13 +22,13 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">REGISTRATE <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="Registrarse.html">REGISTRATE <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">LOGIN</a>
+            <a class="nav-link" href="login.html">LOGIN</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">PREGUNTAS FRECUENTES</a>
+            <a class="nav-link" href="">PREGUNTAS FRECUENTES</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
