Nuevos cambios css y html

--- a/Registrarse.html
+++ b/Registrarse.html
@@ -40,7 +40,7 @@
   <body>
     <form class="needs-validation" novalidate>
       <div class="row">
-        <h1>Registrate aquí...</h1>
+        <h1>¡Registrate y empezá a jugar!</h1>
       </div>
       <div class="form-row">
         <div class="col-12 col-md-4">
@@ -71,12 +71,12 @@
 
         <div class="col-12 col-md-4">
           <label>Contraseña</label>
-          <input type="text" class="form-control"  placeholder="Contraseña" value="" required>
+          <input type="password" class="form-control"  placeholder="Contraseña" value="" required>
 
         </div>
         <div class="col-12 col-md-4">
           <label>Reingresa tu Contraseña</label>
-          <input type="text" class="form-control"  placeholder="Reingresa tu Contraseña" value="" required>
+          <input type="password" class="form-control"  placeholder="Reingresa tu Contraseña" value="" required>
 
         </div>
 
@@ -106,7 +106,7 @@
           </div>
         </div>
       </div>
-      <button class="boton-registro btn btn-primary" type="submit">Registrarme</button>
+      <button class="boton-registro btn btn-primary" type="button">Registrarme</button>
     </form>
     <footer class="row">
       <div class="col-12 footer">
