--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
             <form class="" action="index.html" method="post">
               <p>
                 <label for="email"></label>
-                <input class= "casillero email" id="email" type="email" name="email" value="" placeholder="Ingresa tu correo electrónico">
+                <input class= "casillero email" id="email" type="email" name="email" value="" placeholder="Ingresa tu correo electrónico" text-center>
               </p>
               <p>
                 <span class="errorEmail"></span>
