--- a/preguntas.html
+++ b/preguntas.html
@@ -45,27 +45,27 @@
         </div>
         <div class="preg-rtas col-md-8 preg-rtas">
           <h2>¿Cómo me registro?</h2>
-          <p>Para registraste debes completar un formulario con tus datos hacendo. <a href="Registrarse.html">click aquí.</a>
+          <p>Para registrarte debes completar un formulario con tus datos haciendo <a href="Registrarse.html">click aquí.</a>
           </p>
           <h2>¿Cómo puedo recuperar mi contraseña?</h2>
-          <p>Si olvido su contraseña puede recuperarla ingresando <a href="login.html">aquí.</a>
+          <p>Si olvidó su contraseña puede recuperarla ingresando <a href="login.html">aquí.</a>
           </p>
           <h2>¿Cúal es el objetivo?</h2>
-          <p>El objetivo del juego es poner tu argentinidad a prueba. Esto se hará respondiedo preguntas, si la respuesta es correcta, éstas te daran un puntaje, el cual será acumulativo e irá determinando un porcentaje.</p>
+          <p>El objetivo del juego es poner tu argentinidad a prueba respondiedo preguntas. Si la respuesta es correcta, éstas te darán un puntaje, el cual será acumulativo e irá determinando un porcentaje.</p>
           <h2>¿Cúales son las reglas?</h2>
-          <p>Cada una de las caras del dado posee una categoria: Costumbres Argentinas, Historia, Geografia, Fauna y flora, Entretenimiento, Deportes. Se puede jugar solo o con otras personas. En este caso los jugadores podran competir por puntos o poner en juego los suyos</p>
+          <p>Cada una de las caras del dado posee una categoría: Costumbres Argentinas, Historia, Geografia, Fauna y flora, Entretenimiento, Deportes. Se puede jugar solo o con otras personas. En este último caso, los jugadores podrán competir por puntos o arriesgar los que haya conseguido hasta el momento..</p>
           <h2>¿Cómo jugar?</h2>
-          <p>El participante deberá tirar el dado. En el mismo se podra observar sobre una de sus caras la categoria sobre la cúal se hará la pregunta que deberá responder.</p>
-          <p>El participante tendra 5 posibilidades de contestar en forma erronea, pero podrá acumular 1 vida cada vez que complete un puntaje equivalente al 20%.</p>
-          <p>El participante podra jugar solo o con otros jugadores, con los cuales podra competir.</p>
+          <p>El participante deberá tirar el dado. En el mismo, se podrá observar sobre una de sus caras la categoría sobre la cúal se hará la pregunta que deberá responder.</p>
+          <p>El participante tendrá 5 posibilidades de contestar en forma errónea, pero podrá acumular 1 vida cada vez que complete un puntaje equivalente al 20%.</p>
+          <p>El participante podrá jugar solo o con otros jugadores, con los cuales podra competir.</p>
           <h2>¿Qué edad debo tener para jugar?</h2>
-          <p>Los jugadores deben tener ser mayores de 18 años.</p>
-          <h2>¿Cuando finaliza el juego?</h2>
+          <p>Los jugadores deben ser mayores de 18 años.</p>
+          <h2>¿Cuándo finaliza el juego?</h2>
           <p>El juego finaliza al llegar al 100% Argento.</p>
-          <h2>¿La aplicacion tiene contenido pago?</h2>
-          <p>La aplicacion es gratuita.</p>
+          <h2>¿La aplicación tiene contenido pago?</h2>
+          <p>La aplicacion es totalmente gratuita.</p>
           <h2>¿Se pueden comprar vidas?</h2>
-          <p>No es posible comprar vidas, solo se puden ganar mediante la acumulacion de respuestas correctas.</p>
+          <p>No es posible comprar vidas, sólo se puden ganar mediante la acumulación de respuestas correctas.</p>
 
 
         </div>
@@ -78,8 +78,8 @@
               <li><a href="#">¿Cúal es el objetivo?</a></li>
               <li><a href="#">¿Cómo jugar?</a></li>
               <li><a href="#">¿Qué edad debo tener para jugar?</a></li>
-              <li><a href="#">¿Cuando finaliza el juego?</a></li>
-              <li><a href="#">¿La aplicacion tiene contenido pago?</a></li>
+              <li><a href="#">¿Cuándo finaliza el juego?</a></li>
+              <li><a href="#">¿La aplicación tiene contenido pago?</a></li>
               <li><a href="#">¿Se pueden comprar vidas?</a></li>
             </ul>
           </nav>
@@ -89,7 +89,7 @@
 
       <footer class="row">
         <div class="col-12 footer">
-          Grupo9DHCopyright2019 - Todos los derechos reservados
+          Grupo9DHCopyright2019 - Todos los derechos reservados.
         </div>
       </footer>
     </div>
