--- a/Registrarse.html
+++ b/Registrarse.html
@@ -20,7 +20,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">REkGISTRATE <span class="sr-only">(current)</span></a>
+        <a class="nav-link" href="#">REGISTRATE <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="login.html">LOGIN</a>
@@ -94,10 +94,11 @@
         </div>
         <div class="col-12 col-md-6">
           <label>Ciudad</label>
-          <input type="text" class="form-control"  placeholder="Ciudad" required>
-
+          <input type="text" class="form-control valida-ciudad"  placeholder="Ciudad" value="" required>
+          <span class="errorCiudad"></span>
         </div>
       </div>
+
       <div class="form-group">
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
